--- a/cores.html
+++ b/cores.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cores</title>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            document.querySelectorAll('button').forEach(function(button) {
-                button.onclick = function() {
-                    document.querySelector('#ola').style.color = button.dataset.color
-                }
-            })
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('select').onchange = function() {
+                document.querySelector('#hello').style.color = this.value
+            }
         })
     </script>
 </head>
 <body>
-    <h1 id="ola">Olá!</h1>
-    <button data-color="red">Vermelho</button>
-    <button data-color="blue">Azul</button>
-    <button data-color="green">Verde</button>
+    <h1 id="hello">Olá!</h1>
+    <select>
+        <option value="black">Preto</option>
+        <option value="red">Vermelho</option>
+        <option value="blue">Azul</option>
+        <option value="green">Verde</option>
+    </select>
 </body>
 </html>
